[package]
name = "saveswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dirs = "5.0.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
codegen-units = 1
